--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,3 @@
-set -g default-terminal "xterm-256color"
-#set -ga terminal-overrides ",*256col*:Tc"
-set -ga terminal-overrides ",xterm-256color:Tc"
-set-option -g default-terminal "screen-256color"
-
-set-option -g focus-events on
-# remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
@@ -19,29 +12,18 @@ bind -r l select-pane -R
 bind-key -n C-S-Left swap-window -t -1 \; previous-window
 bind-key -n C-S-Right swap-window -t +1 \; next-window
 
+set-option -g status-style bg='#0f1419',fg=white
 
+# Display Clock
+set-window-option -g clock-mode-colour colour64 #green
 
-#### basic settings
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
 
-set-option -g status-justify "left"
-#set-option utf8-default on
-#set-option -g mouse-select-pane
-set-window-option -g mode-keys vi
-#set-window-option -g utf8 on
-# look'n feel
-set-option -g status-fg cyan
-set-option -g status-bg black
-set -g pane-active-border-style fg=colour166,bg=default
-set -g window-style fg=colour10,bg=default
-set -g window-active-style fg=colour12,bg=default
-set-option -g history-limit 64096
-
-set -sg escape-time 10
-
-#### COLOUR
-
-# default statusbar colors
-set-option -g status-style bg=colour235,fg=colour136,default
+# allow the title bar to adapt to whatever host you connect to
+set -g set-titles on
+set -g set-titles-string "#T"
 
 # default window title colors
 set-window-option -g window-status-style fg=colour244,bg=colour234,dim
@@ -55,21 +37,3 @@ set-option -g pane-active-border-style fg=colour136,bg=colour235
 
 # message text
 set-option -g message-style bg=colour235,fg=colour166
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
-
-# allow the title bar to adapt to whatever host you connect to
-set -g set-titles on
-set -g set-titles-string "#T"
-
-# import
-if-shell "uname -s | grep -q Darwin" "source ~/.tmux.conf.osx"
-
-# Powerline
-# source ~/.tmux.powerline.conf
-# run-shell "powerline-config tmux setup"
